-Working dynamic search build - fixed analysis and transaction_graph to search dynamically threw utalizing the api connections and daatbae functionality added a "innit" t make sure python recognizes "modules" folder as a package and updated requirments

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 #python  v3.12.2 
-colorlog
-requests
-python-dotenv
-sqlite3
-os
-numpy
-pandas
-
-
+colorlog>=6.8.2
+requests>=2.31.0
+python-dotenv>=1.0.1
+numpy>=1.26.4
+pandas>=2.2.1
+networkx>=3.2.1
